# vectorz

./: LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  scratchpad.py
src/vectorz/: __init__.py  canvas.py  shapes.py  tags.py
tests/: test_canvas.py
