[project]
name = "vectorz"
version = "0.1.0"
description = "Add your description here"
authors = [{name = "Steve Berardi", email = "hello@steveberardi.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.11.9",
    "rtree>=1.4.1",
    "shapely>=2.0.7",
]

[project.urls]
Home = "https://github.com/steveberardi/urlz"



[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


